# data-structures

./: .gitignore  CMakeLists.txt
Gab-P1/: Q1.c  Q2.c  Q3.c  Q4.c  TLC.c  TLC.h  lista.h  lista2.c  lista2.h
list1/: q2.c
list2/: q1.c  q2.c
list3/: q1.c
list4/: exAula.c
list5/: list.c  q1.c  q2.c  q2.cpp  q3.c  q4.c
list6/: node.c  node.h  q1.c  q2.c  q3.c  q5.c  q7.c  queue.c  stack.c
list7/: binaryTree.c  coloredTree.c  q2.c  q3.c  q6.c  q8.c  q9.c
trab1/: graph.c  graph_filter.c
